tests/baselines/reference/inheritanceMemberPropertyOverridingAccessor.errors.txt
tests/cases/compiler/inheritanceMemberPropertyOverridingAccessor.ts(3,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberPropertyOverridingAccessor.ts(6,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberPropertyOverridingAccessor.ts(12,5): error TS2610: 'x' is defined as an accessor in class 'a', but is overridden here in 'b' as an instance property.


==== tests/cases/compiler/inheritanceMemberPropertyOverridingAccessor.ts (3 errors) ====
    class a {
        private __x: () => string;
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return this.__x;
        }
        set x(aValue: () => string) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            this.__x = aValue;
        }
    }
    
    class b extends a {
        x: () => string;
        ~
!!! error TS2610: 'x' is defined as an accessor in class 'a', but is overridden here in 'b' as an instance property.
    }